Revise hypotheses in diagnostic analysis notebook

--- a/notebooks/03_diagnostic_analysis.ipynb
+++ b/notebooks/03_diagnostic_analysis.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Hypotheses to Test\n",
     "1. **Quantization Impact**: If weight similarity (cosine sim) > 0.95, QLoRA should always be preferred\n",
-    "2. **Layer Sensitivity**: Which transformer layers are most sensitive to quantization?\n",
+    "2. **Rank Sensitivity:** How does LoRA rank \( r \) affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
     "3. **Rank Threshold**: What is the minimum rank r* that preserves quality?\n",
     "\n",
     "---"
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Hypothesis 1: Quantization Impact (Weight Similarity Analysis)\n",
+    "## 3. Hypothesis: Quantization Impact (Weight Similarity Analysis)\n",
     "\n",
     "**Hypothesis:** If cosine similarity between LoRA and QLoRA adapter weights > 0.95, then QLoRA should always be preferred.\n",
     "\n",
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Hypothesis 2: Rank Threshold Analysis\n",
+    "## 4. Hypothesis: Rank Threshold Analysis\n",
     "\n",
     "**Question:** What is the minimum rank r* that preserves acceptable quality?\n",
     "\n",
@@ -574,9 +574,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Hypothesis 3: Layer Sensitivity Analysis\n",
+    "## 5. Hypothesis: Rank Sensitivity Analysis\n",
     "\n",
-    "**Question:** Which transformer weight matrices are most sensitive to quantization?\n",
+    "**Question:** How does LoRA rank \( r \) affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
     "\n",
     "### 5.1 Memory vs Performance Trade-off"
    ]
