Fix markdown formatting for rank sensitivity question

--- a/notebooks/03_diagnostic_analysis.ipynb
+++ b/notebooks/03_diagnostic_analysis.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Hypotheses to Test\n",
     "1. **Quantization Impact**: If weight similarity (cosine sim) > 0.95, QLoRA should always be preferred\n",
-    "2. **Rank Sensitivity:** How does LoRA rank \( r \) affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
+    "2. **Rank Sensitivity:** How does LoRA rank r affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
     "3. **Rank Threshold**: What is the minimum rank r* that preserves quality?\n",
     "\n",
     "---"
@@ -576,7 +576,7 @@
    "source": [
     "## 5. Hypothesis: Rank Sensitivity Analysis\n",
     "\n",
-    "**Question:** How does LoRA rank \( r \) affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
+    "**Question:** How does LoRA rank r affect robustness to 4-bit quantization, and do lower ranks (r = 2, 4) degrade more than higher ranks (r = 8, 16)?\n",
     "\n",
     "### 5.1 Memory vs Performance Trade-off"
    ]
